@@ -123,6 +123,5 @@ multi-/over-featured, bloated project.
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small
 </body>
 </html>
