@@ -238,6 +238,5 @@ service and for configuring arbitrary log services to notify events.
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small>
 </body>
 </html>
