@@ -129,6 +129,5 @@ A client for <a href="network.html">socklog network logging</a>:
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small>
 </body>
 </html>
