@@ -136,6 +136,5 @@ for recent informations.
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small>
 </body>
 </html>
