@@ -50,6 +50,5 @@ configuring and setting up <i>socklog</i> services.
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small>
 </body>
 </html>
