@@ -175,6 +175,5 @@ See the documentation of
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small
 </body>
 </html>
