@@ -111,6 +111,5 @@ Now it is safe to stop the <i>socklog-notify</i> service.
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small
 </body>
 </html>
