@@ -124,6 +124,5 @@ or post to the <tt>&lt;misc@list.smarden.org&gt;</tt> mailing list.
 <address><a href="mailto:lu@cachescrubber.org">
 Lars Uffmann, &lt;lu@cachescrubber.org&gt;
 </a></address>
-<small>$Id$</small>
 </body>
 </html>
