@@ -71,6 +71,5 @@ need to re-create your service directories using the
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small>
 </body>
 </html>
