@@ -31,6 +31,5 @@ Rebuild and install the <i>socklog</i> programs:
 <address><a href="mailto:pape@smarden.org">
 Gerrit Pape &lt;pape@smarden.org&gt;
 </a></address>
-<small>$Id$</small>
 </body>
 </html>
